[project]
name = "aeon-for-time-series-clustering-with-python"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aeon>=0.0.0",
    "classification>=0.1.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "preprocessing>=0.1.13",
    "pytest>=9.0.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "tslearn>=0.8.1",
    "visualization>=1.0.0",
]
