[project]
name = "aeon-for-time-series-clustering-with-python"
version = "0.1.0"
description = "Companion code for Medium article: Aeon for time series clustering with Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "aeon>=1.4.0",
    "matplotlib>=3.8.0",
    "numpy>=1.26.0,<2.3.0",
    "pandas>=2.2.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.6.0,<1.8.0",
    "tslearn>=0.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.9.0",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

# Optional Rust extension — build with:
#   pip install maturin && maturin develop --release -m rust/py/Cargo.toml
[tool.maturin]
manifest-path = "rust/py/Cargo.toml"
module-name = "aeon_for_time_series_clustering_with_python_rs"

