[package]
name = "aeon_for_time_series_clustering_with_python_bench"
description = "Standalone Rust benchmark (no Python)"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "bench"
path = "src/main.rs"

[dependencies]
aeon_for_time_series_clustering_with_python_core = { path = "../core" }
