[package]
name = "aeon_for_time_series_clustering_with_python_rs"
description = "Python bindings (PyO3) for aeon_for_time_series_clustering_with_python_core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "aeon_for_time_series_clustering_with_python_rs"
crate-type = ["cdylib"]

[dependencies]
aeon_for_time_series_clustering_with_python_core = { path = "../core" }
pyo3 = { version = "0.28", features = ["extension-module"] }
numpy = "0.28"
